--- a/test.ipynb
+++ b/test.ipynb
@@ -2,16 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "39a5b1cf-26d9-4970-8315-37761da834e2",
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "p, .jp-RenderedHTMLCommon p {\n",
+      "  font-family: \"Times New Roman\"\n",
+      "}\n",
+      "\n"
+     ]
+    },
+    {
      "data": {
       "text/html": [
-       "<style>body {\n",
+       "<style>p, .jp-RenderedHTMLCommon p {\n",
        "  font-family: \"Times New Roman\"\n",
        "}\n",
        "</style>"
@@ -20,7 +30,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -28,6 +38,7 @@
    "source": [
     "from IPython.display import HTML\n",
     "from urllib.request import urlopen\n",
+    "print(urlopen(\"https://raw.githubusercontent.com/idenproject/public/main/jupyterstyle.css\").read().decode('utf-8'))\n",
     "HTML('<style>'+urlopen(\"https://raw.githubusercontent.com/idenproject/public/main/jupyterstyle.css\").read().decode('utf-8')+'</style>')"
    ]
   },
