--- a/test.ipynb
+++ b/test.ipynb
@@ -26,8 +26,8 @@
     "# This block load the theme for the Jupyter Notebook\n",
     "from IPython.display import HTML\n",
     "from urllib.request import urlopen\n",
-    "HTML('<style>'+urlopen(\"https://raw.githubusercontent.com/idenproject/public/main/jupyterstyle.css\").read().decode('utf-8')+'</style>')\n",
-    "HTML('Theme loaded')"
+    "print(\"Loading theme\")\n",
+    "HTML('<style>'+urlopen(\"https://raw.githubusercontent.com/idenproject/public/main/jupyterstyle.css\").read().decode('utf-8')+'</style>')"
    ]
   },
   {
